manifest/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 81
      targetPort: 80
      nodePort: 30001  
  type: NodePort
