manifest/NetworkPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-frontend-to-backend
spec:
  podSelector:
    matchLabels:
      app: backend  # Targeting backend pods
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: frontend  # Allowing traffic from frontend pods
      ports:
        - protocol: TCP
          port: 81  # The port where your backend is listening
  policyTypes:
    - Ingress
